Cronograma - Adicionar valores de custo e físico planejados à visão detalhada
- Mudança no método de captura dos dados para alteração de label para atender ao requisito da JDK.